# spider-scrape

./: Makefile  README.md  pyproject.toml
.github/workflows/: mypy_check.yml  pytest.yml  ruff_check.yml
spider_scrape/: __init__.py  arango_db.py  bs.py  db.py  scraper.py
tests/: test_bs.py
