[tool.poetry]
name = "spider-scrape"
version = "0.0.2"
description = "Website Scrape Tool"
authors = ["Philip May <philip@may.la>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spider_scrape"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "*"
python-arango = {version = "*", optional = true}
attrs = "*"
markdownify = "*"
mdformat = "*"

[tool.poetry.group.lint.dependencies]
black = "*"
ruff = "*"
mypy = "*"

[tool.poetry.extras]
arango = ["python-arango"]

[tool.black]
line-length = 119
target-versions = ["py38", "py39", "py310", "py311"]

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
line-length = 119
fixable = ["I"]
target-version = "py38"
