[tool.poetry]
name = "spider-scrape"
version = "0.0.5rc1"
description = "Website Scrape Tool"
authors = ["Philip May <philip@may.la>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/telekom/spider-scrape"
keywords = ["scrape", "web", "html"]
packages = [{include = "spider_scrape"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "*"
python-arango = {version = "*", optional = true}
attrs = "*"
markdownify = "*"
mdformat = "*"
python-dotenv = "*"

[tool.poetry.group.lint.dependencies]
black = "*"
ruff = "*"
mypy = "*"
mdformat = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.extras]
arango = ["python-arango"]

[tool.black]
line-length = 119
target-versions = ["py38", "py39", "py310", "py311"]

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "CPY001",  # flake8-copyright
]
line-length = 119
fixable = ["I"]
target-version = "py38"

[tool.ruff.flake8-copyright]
notice-rgx = "(# Copyright \\(c\\) \\d{4} .*\\n)+# This software is distributed under the terms of the MIT license\\n# which is available at https://opensource.org/licenses/MIT\\n\\n"


[tool.mypy]
ignore_missing_imports = true
